# nn_tilde_bending

./: .gitignore  README.md
install/: dylib_fix.py
src/: CMakeLists.txt
src/backend/: backend.cpp  backend.h
src/frontend/juce/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/frontend/maxmsp/mc.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/mcs.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/nn.info/: CMakeLists.txt
src/frontend/maxmsp/nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/shared/: nn_base.h
src/frontend/puredata/nn_tilde/: CMakeLists.txt  nn_tilde.cpp
src/frontend/puredata/shared/: pd_model_download.h
